--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get: ^4.3.8
   get_it: ^7.2.0
   http: ^0.13.4
+  intl: ^0.17.0
   lottie: ^1.2.1
   logger: ^1.1.0
   pretty_dio_logger: ^1.1.1
